--- a/MOTTestCentreApp/Views/Shared/_LayoutLogin.cshtml
+++ b/MOTTestCentreApp/Views/Shared/_LayoutLogin.cshtml
@@ -1,5 +1,4 @@
-﻿
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -8,40 +7,25 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/MOTTestCentreApp.styles.css" asp-append-version="true" />
+
+<style>
+    .logo{
+        padding-left: 500px;
+        padding-top: 20px;
+    }
+</style>
 </head>
+
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3" style="padding-left:340px">
             <div class="container-fluid">
-                <a class="text-info"><img src="/images/kwikfitlogo.jpg" alt="images" style="width:130px; height:50px;" /></a>
+
+                <p class="logo"><img src="/images/kwikfitlogo.jpg" /></p>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between" style="padding-left: 350px;">
-                    <ul class="navbar-nav flex-grow-1">
-                      @*   <li class="nav-item">
-                            <a class="nav-link text-black" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li> *@
-                        <li class="nav-item">
-                            <a class="nav-link text-black" asp-area="" asp-controller="Home" asp-action="Create">Create</a>
-                        </li>
-                     @*    <li class="nav-item">
-                            <a class="nav-link text-black" asp-area="" asp-controller="Home" asp-action="UploadCSV" style="padding-right: 400px;">Upload CSV</a>
-                        </li> *@
-
-
-                      @*   <li>
-                            <a class="text-info"><img src="/images/UserLogo.png" alt="images" style="width:50px; height:50px;"></a>
-                        </li> *@
-
-
-                        <li>
-                            <a class="navbar-brand text-black" asp-area="" asp-controller="Home" asp-action="Index" style="padding-left: 430px;">Log Out</a>
-                        </li>
-                       
-                    </ul>
-                </div>
             </div>
         </nav>
     </header>
@@ -51,11 +35,11 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+   @*  <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2023 - AdminApp - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
-    </footer>
+    </footer> *@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
