--- a/MOTTestCentreApp/Views/Shared/_Layout.cshtml
+++ b/MOTTestCentreApp/Views/Shared/_Layout.cshtml
@@ -23,9 +23,9 @@
                       @*   <li class="nav-item">
                             <a class="nav-link text-black" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li> *@
-                        <li class="nav-item">
+                      @*   <li class="nav-item">
                             <a class="nav-link text-black" asp-area="" asp-controller="Home" asp-action="Create">Create</a>
-                        </li>
+                        </li> *@
                      @*    <li class="nav-item">
                             <a class="nav-link text-black" asp-area="" asp-controller="Home" asp-action="UploadCSV" style="padding-right: 400px;">Upload CSV</a>
                         </li> *@
@@ -37,7 +37,7 @@
 
 
                         <li>
-                            <a class="navbar-brand text-black" asp-area="" asp-controller="Home" asp-action="Index" style="padding-left: 430px;">Log Out</a>
+                            <a class="navbar-brand text-black" asp-area="" asp-controller="Home" asp-action="Index" style="padding-left: 610px;">Log Out</a>
                         </li>
                        
                     </ul>
