Commit button updated

--- a/MOTTestCentreApp/Views/Home/CreateMOTTestForm.cshtml
+++ b/MOTTestCentreApp/Views/Home/CreateMOTTestForm.cshtml
@@ -53,7 +53,7 @@
                         <h1 class="display-3" style="font-size: 20px; padding-top:15px; text-align:left; color:green; font-weight:bold">Test Successfully Created </h1>               
                     </div>
                     <div class="col-1" style="text-align:right; padding-top:7px;">
-                        <button type="submit" class="btn btn-success" style="width:80px;" formaction="@Url.Action("MOTTestForm")">Create</button>
+                        <button type="submit" class="btn btn-success" style="width:80px;" formaction="@Url.Action("MOTTestForm")" disabled>Create</button>
                     </div>
                 }else if(Model.MOTNotRequired == true){
                     <div class="col-6">
