--- a/MOTTestCentreApp/Views/Shared/_Layout.cshtml
+++ b/MOTTestCentreApp/Views/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
-﻿
+﻿@using MOTTestCentreApp.ViewModels
+@model MOTTestCentreViewData
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,29 +20,29 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
-                </button>
+                </button>            
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between" style="padding-left: 350px;">
-                    <ul class="navbar-nav flex-grow-1">
-                      @*   <li class="nav-item">
-                            <a class="nav-link text-black" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li> *@
-                      @*   <li class="nav-item">
-                            <a class="nav-link text-black" asp-area="" asp-controller="Home" asp-action="Create">Create</a>
-                        </li> *@
-                     @*    <li class="nav-item">
-                            <a class="nav-link text-black" asp-area="" asp-controller="Home" asp-action="UploadCSV" style="padding-right: 400px;">Upload CSV</a>
-                        </li> *@
+                    <ul class="navbar-nav flex-grow-1">                
 
+                        @if(Model.authorisedMOTTesters.isManager == true || Model.IsManager == true){
+                            <li style="padding-left:500px;">
+                                <a class="navbar-brand text-black" asp-area="" asp-controller="Home" asp-action="CreateNewTester">Add Tester</a>
+                            </li>
+                            <li style="padding-left:50px;">
+                                <a class="navbar-brand text-black" asp-area="" asp-controller="Home" asp-action="CreateMOTCert">Create MOT</a>
+                            </li>
+                            <li style="padding-left:50px;">
+                                <a class="navbar-brand text-black" asp-area="" asp-controller="Home" asp-action="EditMOT">Edit MOT</a>
+                            </li>
+                        }else{
+                            <li style="padding-left:500px;">
+                                <a class="navbar-brand text-black" asp-area="" asp-controller="Home" asp-action="EditMOT">Edit MOT</a>
+                            </li>
+                        }             
+                         <li style="padding-left: 50px;">
+                            <a class="navbar-brand text-black" asp-area="" asp-controller="Home" asp-action="Index">Log Out</a>
+                        </li>     
 
-                      @*   <li>
-                            <a class="text-info"><img src="/images/UserLogo.png" alt="images" style="width:50px; height:50px;"></a>
-                        </li> *@
-
-
-                        <li>
-                            <a class="navbar-brand text-black" asp-area="" asp-controller="Home" asp-action="Index" style="padding-left: 610px;">Log Out</a>
-                        </li>
-                       
                     </ul>
                 </div>
             </div>
