--- a/MOTTestCentreApp/Views/Home/CreateMOTTestForm.cshtml
+++ b/MOTTestCentreApp/Views/Home/CreateMOTTestForm.cshtml
@@ -9,13 +9,14 @@
                 <a class="text-info"><img src="/images/UserLogo.png" alt="images" style="width:50px; height:50px;"></a>
             </div>
             <div class="col-3" style="padding:10px; text-align:left">
-                <h1 style="font-size: 20px;">MOT Inspector</h1>
-                @if (Model.authorisedMOTTesters.Firstname is null)
+                @if (Model.authorisedMOTTesters.Firstname is null || Model.authorisedMOTTesters.isManager == true)
                 {
+                    <h1 style="font-size: 20px;">MOT Inspector (Manager)</h1>
                     <h1 class="display-3" style="font-size: 20px;">@ViewBag.Tester</h1>
                 }
                 else
                 {
+                    <h1 style="font-size: 20px;">MOT Inspector</h1>
                     <h1 class="display-3" style="font-size: 20px;">@Model.authorisedMOTTesters.Firstname @Model.authorisedMOTTesters.Surname</h1>
                 }
             </div>
