Added Edit function

--- a/MOTTestCentreApp/Views/Shared/_Layout.cshtml
+++ b/MOTTestCentreApp/Views/Shared/_Layout.cshtml
@@ -32,11 +32,11 @@
                                 <a class="navbar-brand text-black" asp-area="" asp-controller="Home" asp-action="CreateMOTCert">Create MOT</a>
                             </li>
                             <li style="padding-left:50px;">
-                                <a class="navbar-brand text-black" asp-area="" asp-controller="Home" asp-action="EditMOT">Edit MOT</a>
+                                <a class="navbar-brand text-black" asp-area="" asp-controller="Home" asp-action="EditMOTList">Edit MOT</a>
                             </li>
                         }else{
                             <li style="padding-left:500px;">
-                                <a class="navbar-brand text-black" asp-area="" asp-controller="Home" asp-action="EditMOT">Edit MOT</a>
+                                <a class="navbar-brand text-black" asp-area="" asp-controller="Home" asp-action="EditMOTList">Edit MOT</a>
                             </li>
                         }             
                          <li style="padding-left: 50px;">
